# Islands

./: Bateria.cpp  Bateria.h  BuildingX.cpp  BuildingX.h  Buildings.cpp  Buildings.h  CMakeLists.txt  CentralEletrica.cpp  CentralEletrica.h  Deserto.cpp  Deserto.h  Floresta.cpp  Floresta.h  Fundicao.cpp  Fundicao.h  Interface.cpp  Interface.h  Island.cpp  Island.h  Lenhador.cpp  Lenhador.h  MinaCarvao.cpp  MinaCarvao.h  MinaFerro.cpp  MinaFerro.h  Mineiro.cpp  Mineiro.h  Montanha.cpp  Montanha.h  Operario.cpp  Operario.h  Pantano.cpp  Pantano.h  Pastagem.cpp  Pastagem.h  Resources.cpp  Resources.h  Workers.cpp  Workers.h  ZonaX.cpp  (+4 more)
