cmake_minimum_required(VERSION 3.20)
project(IslandsCLion)

set(CMAKE_CXX_STANDARD 14)

add_executable(IslandsCLion main.cpp Interface.cpp Interface.h Island.cpp Island.h Resources.cpp Resources.h Montanha.cpp Montanha.h Deserto.cpp Deserto.h Pastagem.cpp Pastagem.h Floresta.cpp Floresta.h Pantano.cpp Pantano.h ZonaX.cpp ZonaX.h MinaFerro.cpp MinaFerro.h MinaCarvao.cpp MinaCarvao.h CentralEletrica.cpp CentralEletrica.h Bateria.cpp Bateria.h Fundicao.cpp Fundicao.h Operario.cpp Operario.h Lenhador.cpp Lenhador.h Mineiro.cpp Mineiro.h Zones.cpp Zones.h Buildings.cpp Buildings.h Workers.cpp Workers.h)
